# word2vec-implementation

./: .gitignore  data.dvc  pyproject.toml
.dvc/: config
jobs/: config.yaml  process.py  scrape.py  settings.py  train.py
word2vec/dataset/: __init__.py  data_module.py
word2vec/models/: __init__.py  skipgram.py
word2vec/process/: __init__.py  text_processor.py
word2vec/scraper/: __init__.py  gutenberg.py  spanish_books_ids.pkl
