[tool.poetry]
name = "word2vec"
version = "0.1.0"
description = ""
authors = ["keanrawr"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.2"
torchvision = "^0.16.2"
torchaudio = "^2.1.2"
lightning = "^2.1.3"
mlflow = "^2.9.2"
tqdm = "^4.66.1"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
nltk = "^3.8.1"
httpx = "^0.26.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
